MODIFIED home html/css

--- a/public/css/styles-home.css
+++ b/public/css/styles-home.css
@@ -19,7 +19,6 @@
 }
 html {
     box-sizing: border-box;
-    font-size: 62.5%;
     color: var(--gris);
   }
 *,
@@ -27,62 +26,17 @@ html {
     box-sizing: inherit;
 }
 body {
-    font-size: 1.2rem;
+    font-size: 12px;
     font-family: var(--main-font);
-}
-img {
-    width: 100%;
-}
-/* HEADER */
-
-header {
-    background-color: #000;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    width: 100%;
-}
-.img-logo-header {
-    padding: 1rem;
-}
-
-#logo-header {
-    width: 50%;
-}
-
-#find {
-    display: none;
-}
-
-#search {
-    display: none;
-}
-
-.log-sign {
-    display: none;
-}
-
-.menu-desplegable {
-    margin-right: 0.5rem;
-    font-size: 2.9rem;
-    margin-top: 1.5rem;
-}
-
-.menu-desplegable:hover {
-    color: #8F4DB5;
-    transition: 1000ms;
-}
-
-.main-navbar {
-    display: none;
 }
 
 /* MAIN */
-
-main {
+.imagen {
+    width: 100%;
+}
+.main-home {
     background: var(--fondo);
-    padding-top: 8rem;
+    padding-top: 80px;
 }
 .container,
 .game {
@@ -91,10 +45,10 @@ main {
     /* padding: 1rem 0; */
 }
 .lanzamientos {
-    padding: 1.5rem 0;
+    padding: 15px 0;
 }
 .img-lanzamiento {
-    border-radius: 1rem;
+    border-radius: 10px;
     border-color: var(--fondo);
     transition: all 450ms;
 }
@@ -103,13 +57,13 @@ main {
 }
 .container-bs,
 .container-cs {
-    padding: 0 0 1.5rem 0;
+    padding: 0 0 15px 0;
 }
 .tittle {
-    font-size: 2.8rem;
+    font-size: 28px;
     text-align: center;
     color: var(--gris);
-    padding: 1rem 0 1.5rem;
+    padding: 10px 0 15px;
 }
 
 .best-seller,
@@ -119,8 +73,8 @@ main {
 }
 .best-seller article,
 .comming-soon article {
-    margin-bottom: 1.5rem;
-    padding-top: 1rem;
+    margin-bottom: 15px;
+    padding-top: 10px;
     transition: all;    
 }
 
@@ -129,7 +83,7 @@ main {
     margin: 0 auto;
 }
 .info {
-    padding: 1rem 0;
+    padding: 10px 0;
     text-align: center;
 }
 .name,
@@ -137,11 +91,11 @@ main {
     color: var(--gris);
 }
 .category {
-    font-size: 1.4rem;
-    padding: 0.5rem 0;
+    font-size: 14px;
+    padding: 5px 0;
 }
 .name {
-    font-size: 1.8rem;
+    font-size: 18px;
 }
 .box-price {
     display: flex;
@@ -149,21 +103,21 @@ main {
     align-items: center;
 }
 .price {
-    font-size: 1.7rem;
+    font-size: 17px;
     color: var(--gris);
-    padding-right: 0.5rem;
+    padding-right: 5px;
 }
 .discount {
-    font-size: 1.2rem;
+    font-size: 12px;
     color: var(--verde);
 }
 .button {
     font-weight: bold;
-    padding: 1.2rem;
+    padding: 12px;
     border: none;
-    border-radius: 0.5rem;
+    border-radius: 5px;
     outline: none;
-    margin: 1.5rem;
+    margin: 15px;
     color: var(--gris);
     background: var(--magenta);
     transition: all 450ms;
@@ -177,146 +131,22 @@ main {
     box-shadow: 0px 13px 51px -2px rgba(173,16,173,1);
 }
 .button-comming {
-    padding: 1.2rem;
+    padding: 12px;
     border: none;
-    border-radius: 0.5rem;
+    border-radius: 5px;
     outline: none;
-    margin: 1.5rem;
+    margin: 15px;
     color: var(--gris);
     background: black;
 }
-/* FOOTER */
 
-footer {
-    background-color: #000;
-    text-align: center;
-    line-height: 2.3rem;
-    border-top: solid 0.2rem #00FFF0;
-    padding: 2rem;
-}
-.img-logo-footer {
-    width: 120px;
-    height: 120px;
-    margin: 0 auto;
-    padding: 1.5rem;
-}
-.redes-sociales {
-    pad: 1rem;
-}
-#redes {
-    color: rgb(54, 53, 53);
-    font-size: 3rem;
-    margin: 0.5rem;
-}
-.informacion-legal-footer {
-    line-height: 1.2rem;
-}
-.links-footer {
-    margin: 1rem;
-    font-size: 1.6rem;
-}
 
 @media (min-width: 769px) {
-    /* HEADER */
-
-    .img-logo-header {
-        /* margin-right: 0; */
-        /* width: px; */
-        height: 75px;
-    }
-    .img-logo-header img {
-        width: 100%;
-    }    
-    .barra-busqueda {
-        display: flex;
-        justify-content: flex-end;
-        flex-direction: column;
-        margin-right: 5px;
-    }
-    #search {
-        display: unset;
-        max-height: 25px;
-        min-width: 150px;
-        margin-top: 15px;
-        padding: 2px;
-        border-bottom: solid #8F4DB5 3px;
-        background-color: #000;
-        border-radius: 3px;
-    }
-    #search:hover,
-    #search:active,
-    .log-sign:hover {
-        border-color: #8F4DB5;
-    }
-    #find {
-        display: unset;
-        padding: 2px;
-        text-align: center;
-        width: 35px;
-        max-height: 25px;
-        background-color: transparent;
-        color: #666;
-        border-radius: 3px;
-        cursor: pointer;
-    }
-    .log-sign {
-        display: block;
-        margin-top: 1.5rem;
-        margin-right: 0.5rem;
-        font-family: 'Press Start 2P';
-        font-size: 1rem;
-        padding-bottom: 0.7rem;
-    }
-    .menu-desplegable {
-        display: none;
-    }
-    .main-navbar {
-        display: flex;
-        text-align: start;
-    }
-    .main-navbar ul {
-        list-style: none;
-        margin: auto;
-    }
-    .main-navbar li {
-        font-family: 'Press Start 2P';
-        font-size: 0.9rem;
-        display: inline-block;
-        margin-top: 4rem;
-        margin-right: 1rem;
-    }
-    .primer-color:hover {
-        color: #FFE500;
-        opacity: 0.7;
-        transition: all 1000ms;
-    }
-    .segundo-color:hover {
-        color: #1CFF00;
-        opacity: 0.7;
-        transition: all 1000ms;
-    }
-    .tercer-color:hover {
-        color: #00FFF0;
-        opacity: 0.7;
-        transition: all 1000ms;
-    }
-    .cuarto-color:hover {
-        color: #FF00d6;
-        opacity: 0.7;
-        transition: all 1000ms;
-    }
-    .main-descripcion {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        margin-top: 10px;
-        margin-left: 50px;
-    }
 
     /* MAIN */
     .tittle {
-        font-size: 3.2rem;
-        margin-top: 1rem;
+        font-size: 32px;
+        margin-top: 10px;
     }
 
     .best-seller,
@@ -329,51 +159,7 @@ footer {
         border: none;
     }
     .container-bs {
-        border-bottom: 0.2rem solid var(--magenta);
-        border-top: 0.2rem solid var(--magenta);
+        border-bottom: 2px solid var(--magenta);
+        border-top: 2px solid var(--magenta);
     }
-
-    /* FOOTER */
-
-    footer {
-        transition: all 1000ms;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 1rem;
-    }
-    .img-logo-footer{
-        width: 12rem;
-        max-width: 12rem;
-        
-        padding: 0;
-        margin: 0 auto;
-    }
-    .logo-footer {
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .informacion-legal-footer{
-        width: 33%;
-    }
-    .links-footer {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        width: 40%;
-    }
-}
-
-
-@media (min-width: 1280px) {
-    /* HEADER */
-    .main-navbar li {
-        padding-left: 2.5rem;
-        font-family: 'Press Start 2P';
-        font-size: 1.12rem;
-        margin-right: 1.5rem;
-        transition: all 1000ms;
-    }
-
-
-    
 }
