--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -17,42 +17,18 @@
 </head>
 
 <body>
-    <header>
-        <div class="img-logo-header">
-            <img id="logo-header" src="/images/favicon-96x96.png" alt="GameStore">
-        </div>
-        <nav class="main-navbar">
-            <ul>
-                <li class="primer-color">Plataforma <i class="fas fa-caret-down"></i></li>
-                <li class="segundo-color">Edades <i class="fas fa-caret-down"></i></li>
-                <li class="tercer-color">Dificultad <i class="fas fa-caret-down"></i></li>
-                <li class="cuarto-color">Categorías <i class="fas fa-caret-down"></i></li>
-            </ul>
-        </nav>
-        <div class="barra-busqueda">
-            <div>
-                <input type="search" id="search">
-                <i id="find" class="fas fa-search"></i><br>
-            </div>
-            <div class="log-sign">
-                Log in / Sign up
-            </div>
-        </div>
-        <div class="menu-desplegable">
-            <i class="fas fa-caret-square-down"></i>
-        </div>
-    </header>
-    <main>
+    
+    <main class="main-home">
         <div class="container">
             <div class="lanzamientos">
-                <img class="img-lanzamiento" src="/images/family-disruption1.jpg" alt="Family Disruption">
+                <img class="imagen img-lanzamiento" src="/images/family-disruption1.jpg" alt="Family Disruption">
             </div>
             <section class="container-bs">
                 <h2 class="tittle">Más Vendidos</h2>
                 <div class="best-seller">
                     <article class="game game1">
                         <div class="container-img">
-                            <img src="/images/cod.png" alt="Call of Duty">
+                            <img class="imagen" src="/images/cod.png" alt="Call of Duty">
                         </div>
 
                         <div class="info">
@@ -69,7 +45,7 @@
                     </article>
                     <article class="game game2">
                         <div class="container-img">
-                            <img src="/images/fifa-22.png" alt="Fifa 22">
+                            <img class="imagen" src="/images/fifa-22.png" alt="Fifa 22">
                         </div>
                         <div class="info">
                             <h3 class="name">Fifa 22</h3>
@@ -85,7 +61,7 @@
                     </article>
                     <article class="game game3">
                         <div class="container-img">
-                            <img src="/images/age-of-empire-2.jpg" alt="Age Of Empire 2">
+                            <img class="imagen" src="/images/age-of-empire-2.jpg" alt="Age Of Empire 2">
                         </div>
 
                         <div class="info">
@@ -102,7 +78,7 @@
                     </article>
                     <article class="game game4">
                         <div class="container-img">
-                            <img src="/images/motogp21.png" alt="Moto GP 21">
+                            <img class="imagen" src="/images/motogp21.png" alt="Moto GP 21">
                         </div>
 
                         <div class="info">
@@ -125,7 +101,7 @@
                 <div class="comming-soon">
                     <article class="game game5">
                         <div class="container-img">
-                            <img src="/images/overwatch.png" alt="Overwatch">
+                            <img class="imagen" src="/images/overwatch.png" alt="Overwatch">
                         </div>
                         <div class="info">
                             <h3 class="name">Overwatch</h3>
@@ -135,7 +111,7 @@
                     </article>
                     <article class="game 6">
                         <div class="container-img">
-                            <img src="/images/residentevil.png" alt="Resident Evil 8">
+                            <img class="imagen" src="/images/residentevil.png" alt="Resident Evil 8">
                         </div>
                         <div class="info">
                             <h3 class="name">Resident Evil 8</h3>
@@ -145,7 +121,7 @@
                     </article>
                     <article class="game game7">
                         <div class="container-img">
-                            <img src="/images/hotline.png" alt="Hotline Miami 2">
+                            <img class="imagen" src="/images/hotline.png" alt="Hotline Miami 2">
                         </div>
                         <div class="info">
                             <h3 class="name">Hotline Miami 2</h3>
@@ -155,7 +131,7 @@
                     </article>
                     <article class="game game8">
                         <div class="container-img">
-                            <img src="/images/limbo.png" alt="Limbo">
+                            <img class="imagen" src="/images/limbo.png" alt="Limbo">
                         </div>
                         <div class="info">
                             <h3 class="name">Limbo</h3>
@@ -169,36 +145,7 @@
 
         </div>
     </main>
-    <footer>
-        <div class="img-logo-footer">
-            <img class="logo-footer" src="/images/favicon-96x96.png" alt="GameStore">
-        </div>
-        <div class="redes-sociales">
-            <i id="redes" class="fab fa-twitter-square"></i>
-            <i id="redes" class="fab fa-facebook-square"></i>
-            <i id="redes" class="fab fa-instagram-square"></i>
-        </div>
-        <div class="links-footer">
-            <div class="first-column">
-                <p>Publicar en GameStore</p>
-                <p>Trabajá con nosotros</p>
-                <p>Acerca de la compañía</p>
-                <p>Política de privacidad</p>
-            </div>
-            <div class="second-column">
-                <p>Política de reembolso de la tienda</p>
-                <p>Seguridad de la cuenta</p>
-                <p>Club GameStore</p>
-                <p>Newsletter</p>
-            </div>
-        </div>
-        <div class="informacion-legal-footer">
-            © 2021, Game Store, Inc. Todos los derechos reservados. El logotipo de GameStore es una marca comercial o
-            marca registrada de Game Store, Inc. tanto en Argentina como en el resto del mundo. Otras marcas o nombres
-            de productos son marcas comerciales de sus respectivos propietarios. Las transacciones fuera de Argentina se
-            realizan a través de GameStore International, S.A.
-        </div>
-    </footer>
+    
 </body>
 
 </html>
