--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="html-marcos" lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
 </head>
 
-<body>
+<body class="body-marcos">
     
     <main class="main-home">
         <div class="container">
