--- a/src/views/signIn.ejs
+++ b/src/views/signIn.ejs
@@ -1,47 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='/css/styles-signUp.css' rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
-    <title>GameStore :: SignIn</title>
-</head>
-
+    <%- include('./partials/head') %>
+    <%- include('./partials/header') %>
 <body>
-    <header>
-        <div class="img-logo-header">
-            <img id="logo-header" src="/images/favicon-96x96.png" alt="GameStore">
-        </div>
-        <nav class="main-navbar">
-            <ul>
-                <li class="primer-color">Plataforma <i class="fas fa-caret-down"></i></li>
-                <li class="segundo-color">Edades <i class="fas fa-caret-down"></i></li>
-                <li class="tercer-color">Dificultad <i class="fas fa-caret-down"></i></li>
-                <li class="cuarto-color">Categorías <i class="fas fa-caret-down"></i></li>
-            </ul>
-        </nav>
-        <div class="barra-busqueda">
-            <div>
-                <input type="search" id="search">
-                <i id="find" class="fas fa-search"></i><br>
-            </div>
-            <div class="log-sign">
-                Sign Up
-            </div>
-        </div>
-        <div class="menu-desplegable">
-            <i class="fas fa-caret-square-down"></i>
-        </div>
-    </header>
-
     <main class="main-fianriel">
         <button id="cart"><i class="fas fa-shopping-cart"></i></button>
         <form action="/registro" method="POST" class="registro-box-fianriel">
@@ -75,36 +36,7 @@
         </form>
 
     </main>
-    <footer>
-        <div>
-            <img class="img-logo-footer" src="/images/favicon-96x96.png" alt="GameStore">
-        </div>
-        <div class="redes-sociales">
-            <i id="redes" class="fab fa-twitter-square"></i>
-            <i id="redes" class="fab fa-facebook-square"></i>
-            <i id="redes" class="fab fa-instagram-square"></i>
-        </div>
-        <div class="links-footer">
-            <div class="first-column">
-                <p>Publicar en GameStore</p>
-                <p>Trabajá con nosotros</p>
-                <p>Acerca de la compañía</p>
-                <p>Política de privacidad</p>
-            </div>
-            <div class="second-column">
-                <p>Política de reembolso de la tienda</p>
-                <p>Seguridad de la cuenta</p>
-                <p>Club GameStore</p>
-                <p>Newsletter</p>
-            </div>
-        </div>
-        <div class="informacion-legal-footer">
-            © 2021, Game Store, Inc. Todos los derechos reservados. El logotipo de GameStore es una marca comercial o
-            marca registrada de Game Store, Inc. tanto en Argentina como en el resto del mundo. Otras marcas o nombres
-            de productos son marcas comerciales de sus respectivos propietarios. Las transacciones fuera de Argentina se
-            realizan a través de GameStore International, S.A.
-        </div>
-    </footer>
+    <%- include('./partials/footer') %> 
 </body>
 
 </html>
