--- a/public/css/styles-productDetail.css
+++ b/public/css/styles-productDetail.css
@@ -36,6 +36,9 @@
 
 .log-sign {
     display: none;
+    text-align: left;
+    padding-left: 0;
+    margin-left: 0;
 }
 
 .menu-desplegable {
@@ -66,12 +69,12 @@ a:active {
 }
 
 .img-principal-mc {
-    max-width: 70vw;
+    width: 70vw;
     padding: 0;
     border-radius: 5px;
     margin-bottom: 15px;
     margin-top: 30px;
-    margin-left: 15vw;
+    margin-left: 14vw;
 }
 
 .img-principal-mc:hover {
@@ -101,7 +104,10 @@ a:active {
 }
 
 .precio-mc:hover {
-    box-shadow: 0px 0px 10px #FF00d6;
+    cursor: pointer;
+    -webkit-box-shadow: 0px 13px 51px -2px rgba(173,16,173,1);
+    -moz-box-shadow: 0px 13px 51px -2px rgba(173,16,173,1);
+    box-shadow: 0px 13px 51px -2px rgba(173,16,173,1);
 }
 
 .esrb-buy {
@@ -418,6 +424,7 @@ footer {
         text-align: center;
         padding-top: 70px;
         height: 350px;
+        width: 400px;
         margin-left: 15px;
         padding-left: 7px;
         padding-right: 5px;
@@ -428,6 +435,8 @@ footer {
         font-weight: normal;
         font-size: 0.70rem;
         height: 350px;
+        width: 400px;
+        margin-top: 5px;
         text-align: center;
         padding:10px;
         margin-left: 17px;
@@ -522,7 +531,7 @@ footer {
     }
 
     .resumen-mc {
-        padding: 10px;
+        padding-left: 10px;
         border-radius: 8px;
         max-width: 50%;
         margin: auto;
@@ -540,11 +549,13 @@ footer {
         font-size: 1em;
         transition: all 1000ms;
         padding-top: 60px;
+        margin-left: 0;
     }
     .requisitos-min {
         font-size: 1em;
         transition: all 1000ms;
         padding-top: 15px;
+        margin-left: 0;
     }
     
     .first-column,
