--- a/public/css/styles-signUp.css
+++ b/public/css/styles-signUp.css
@@ -227,7 +227,7 @@ footer{
         margin-top: 15px;
         margin-right: 10px;
         font-family: 'Press Start 2P';
-        font-size: 0.80em;
+        font-size: 12px;
     }
 
     .menu-desplegable{
