--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -9,13 +9,13 @@
         </p>  
     <section class="main-descripcion-mc">
         <div class="descripcion-esrb-buy">
-        <article class="descripcion-producto-mc">
+        <div class="descripcion-producto-mc">
             <h2>Nine Witches: Family Disruption</h2>
             <h6>BLOWFISH STUDIOS PTY LTD</h6>
             <p>PS4/ PS5 / PC</p>
-        </article>
+        </div>
         <p class="precio-mc">$225</p>
-        <article class="esrb-buy">
+        <div class="esrb-buy">
             <div class="buy-mc">
                 <button class="cart-mc">Agregar al carrito <i class="fas fa-cart-plus"></i></button>
             </div>
@@ -23,11 +23,11 @@
                 <img class="esrb-photo" src="/images/ESRB-Teen.png" alt="ESRB Teen"><br>
                 <p class="esrb-detail">ESRB: Adolescentes</p>
             </div>
-        </article>
+        </div>
         </div>
         </section>
         <section class="requisitos">
-            <article class="tecnicos">
+            <div class="tecnicos">
             <h4 class="h4-mc">Datos técnicos</h4>
                 <div class="datos-tecnicos">
                     <p>1 jugador</p>
@@ -36,9 +36,9 @@
                     <p>Editor: BLOWFISH STUDIOS PTY LTD</p>
                     <p>Género: Aventura</p>
                     <p>Idiomas de pantalla: Alemán, Chino - Simplificado, Chino - Tradicional, Español, Francés (Francia), Inglés, Portugués (Brasil), Ruso.</p>
-                </article>
+                </div>
             </div>
-            <article class="requisitos-pc">
+            <div class="requisitos-pc">
             <h4 class="h4-mc">Requisitos del sistema</h4>
             <div class="requisitos-min"> 
                 <h6>MÍNIMO:</h6>
@@ -52,10 +52,10 @@
                 <h6>RECOMENDADO:</h6>
                 <p>Requiere un procesador y un sistema operativo de 64 bits</p>
                 </div>
-            </article>
+            </div>
         </section>
     </section>
-        <article class="resumen-mc">
+        <div class="resumen-mc">
             Características:<br>
             
             - Una historia verdaderamente original y única (99,999999 % GARANTIZADO).<br>
@@ -73,21 +73,21 @@
             - Habla con los muertos.<br>
 
             ¡Una aventura tan delirante que te hará delirar hasta el delirio mismo!<br>
-        </article>
+        </div>
     <section class="version">
         <h4 class="h4-mc">Ediciones</h4>
-        <article>
+        <aiv>
             <h4 class="h4-mc">Standard</h4>
 
-        </article>
+        </div>
     </section>
     <section class="complementos">
         <h4 class="h4-mc">Complementos</h4>
     </section>
-        <article class="informacion-legal-developer">
+        <div class="informacion-legal-developer">
             Copyright © 2017 Indiesruption<br>
             <a href="https://www.blowfishstudios.com/privacy">BLOWFISH STUDIOS PTY LTD Privacy Policy & EULA</a>
-        </article>
+        </div>
     </section>
     <button id="cart"><i class="fas fa-shopping-cart"></i></button>
 </main>
