--- a/src/views/shoppingcart.ejs
+++ b/src/views/shoppingcart.ejs
@@ -1,24 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='/css/styles-shoppingcart.css' rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
-    <title>Tu carrito</title>
-</head>
-
-<body>
-
     <%- include('./partials/head') %>
-
+    <%- include('./partials/header') %>
+<body>
         <main>
             <div class="contenedor-productos-carro">
                 <article>
@@ -83,7 +67,7 @@
             </div>
         </main>
 
-        <%- include('./partials/header') %>
+        <%- include('./partials/footer') %> 
 
 </body>
 
