--- a/public/css/styles-shoppingcart.css
+++ b/public/css/styles-shoppingcart.css
@@ -59,6 +59,7 @@ header {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 30px;
 }
 
 .contenedor-productos-carro {
@@ -107,7 +108,6 @@ header {
 
 .contenedor-montos-sumatorias>div {
     background-color: rgba(0, 0, 0, 0.925);
-    opacity: 0.75;
     border-bottom: #00FFF0 1px solid;
     border-radius: 3px;
     height: auto;
@@ -117,7 +117,6 @@ header {
 
 .contenedor-titulos-sumatorias>div {
     background-color: rgba(0, 0, 0, 0.925);
-    opacity: 0.75;
     border-bottom: #00FFF0 1px solid;
     border-radius: 3px;
     height: auto;
