--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,20 +1,8 @@
 <!DOCTYPE html>
 <html class="html-marcos" lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Store</title>
-    <link href='/css/normalize.css' rel="stylesheet">
-    <link href='/css/styles-home.css' rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
-</head>
+    <%- include('./partials/head') %>
+    <%- include('./partials/header') %>
 
 <body class="body-marcos">
     
@@ -145,7 +133,7 @@
 
         </div>
     </main>
-    
+    <%- include('./partials/footer') %>
 </body>
 
 </html>
