--- a/public/css/styles-shoppingcart.css
+++ b/public/css/styles-shoppingcart.css
@@ -176,7 +176,7 @@ button:active {
     width: 12%;
     height: 20px;
     border-color: #8F4DB5;
-    border-radius: 8%;
+    border-radius: 5px;
     margin-bottom: 15px;
     align-items: flex-end;
     transition: all;
@@ -184,9 +184,10 @@ button:active {
     font-size: 10px;
 }
 
-#boton-remove:hover {
+#boton-remove:active {
     background-color: #dd1111;
     border-color: #dd1111;
+    transition: 1000ms;
 }
 
 #boton-linkcobro {
@@ -443,6 +444,15 @@ footer {
         padding-left: 7px;
         padding-top: 15px;
     }
+
+    .botonera-carrito{
+        display: flex;
+    }
+
+    #boton-remove{
+        margin-top: 28px;
+        margin-left: 5px;
+    }
 }
 
 @media (min-width: 1280px) {
@@ -502,5 +512,18 @@ footer {
     .informacion-legal-footer {
         width: 100%;
         margin: 0;
+    }
+
+    #sumar-Addon{
+        margin-top: 38px;
+    }
+
+    #boton-remove{
+        margin-top: 45px;
+        transition: all 1000ms;
+    }
+    .main_shopping_cart{
+        padding-top: 5.6%;
+        padding-bottom: 5.6%;
     }
 }
