--- a/public/css/new-game.css
+++ b/public/css/new-game.css
@@ -87,26 +87,60 @@ html {
     font-size: 10px;
 
 }
-.box-buttom {
+.box-button {
     text-align: center;
     padding: 10px 0 25px;
+    border-radius: 5px;
 }
-.send-buttom-m {
+.send-button-m {
     text-align: center;
     padding: 10px;
     width: 70%;
     max-width: 300px;
     color: var(--gris);
     background-color: var(--magenta);
+    border: none;
+    border-radius: 5px;
     transition: all 450ms;
 }
-.send-buttom-m:hover {
+.send-button-m:hover {
     cursor: pointer;
     color: white;
     -webkit-box-shadow: 0px 13px 51px -2px rgba(173,16,173,1);
     -moz-box-shadow: 0px 13px 51px -2px rgba(173,16,173,1);
     box-shadow: 0px 13px 51px -2px rgba(173,16,173,1);
 }
+@media (min-width: 768px) {
+    .container-button {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 20px;
+        margin: 0 auto;
+        width: 70%;
+        max-width: 300px;
+    }
+    .send-button-m {
+        width: 100%;
+    }
+}
+
+@media (min-width: 1024px) {
+    .contenido-principal {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .container-form {
+        max-width: 800px;
+    }
+    .container-button {
+        max-width: 450px;
+    }
+}
+
+
+
+
+
 
 
 
